--- a/src/lib/css/seeAllSets.css
+++ b/src/lib/css/seeAllSets.css
@@ -1,1 +1,42 @@
-/* css file for user to see all their sets */
+/* file for user to see all their sets */
+
+.set a{
+  font-size: 1em;
+}
+body {
+  background-color: #242943;
+  color: white;
+}
+.sets{
+  width: 100%;
+  display: grid;
+  place-items: center;
+  grid-template-columns: 1fr;
+}
+.set{
+  background: rgba(23, 27, 43, 0.5);
+  padding: 0.7em;
+  width: 50%;
+  padding-bottom: 5px;
+  border-radius: 15px;
+  margin-bottom: 1em;
+}
+header.main {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 70%;
+  font-size: 1.5em;
+  padding: 0.5em;
+  border-bottom: 2px solid #2F3856;
+  margin-bottom: 1.2em;
+}
+header.main h1 {
+  margin: 0
+}
+@media only screen and (max-width: 1700px) {
+  .set {
+    width: 80%;
+  }
+}
+
